--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,12 @@
     {
     "format": "expanded",
     "extensionName": ".css",
-    "savePath": "/style"
+    "savePath": "/dist/style"
     },
     {
     "extensionName": ".min.css",
     "format": "compressed",
-    "savePath": "/style"
+    "savePath": "/scss"
     }
     ],
     "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
